# mongodb_rr

./: mongodb.cabal
src/Data/MongoDB/: .BSON.hs.swo  .BSON.hs.swp  .MongoClient.hs.swo  .MongoClient.hs.swp  .MongoWire.hs.swo  .MongoWire.hs.swp  BSON.hs  BSONValues.hs  MongoClient.hs  MongoWire.hs  bson.hs  flow.hs
tests/: .TestMongo.hs.swp  BsonTest.hs  TestMongo  TestMongo.hi  TestMongo.hs
tests/basic_types/: array.bson  array.xson  binary.bson  binary.xson  boolean_false.bson  boolean_false.xson  boolean_true.bson  boolean_true.xson  date.bson  date.xson  dbref.bson.bad  int.bson  int.xson  null.bson  null.xson  number.bson  number.xson  oid.bson  oid.xson  regex.bson  regex.xson  string.bson  string.xson  symbol.bson  symbol.xson
tests/complex/: smorgasbord.bson  smorgasbord.bson.failed  smorgasbord.xson
tests/single_types/: binaries.bson  dbref.bson  dbref.xson  oids.bson  oids.xson  strings.bson  strings.xson  symbols.bson  undefined.bson.failed
